--- a/popup.html
+++ b/popup.html
@@ -1,20 +1,23 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<script src="popup.js"></script>
-		<link rel="stylesheet" href="popup.css">
-	</head>
+  <head>
+    <script src="popup.js"></script>
+    <link rel="stylesheet" href="popup.css">
+  </head>
 
-	<body>
-		<button onclick="addSite"><p>Add Site</p></button>
-		<div id="sites">
-			
-		</div>
+  <body>
+    <div id="siteDisplay">
+      <button id="addSite">Add Site</button>
+      <ul id="siteList">
+      </ul>
+    </div>
 
-		<div id="newSite">
-			<form>
-				<input type="text" id="siteName">
-			</form>
-			<button onclick="saveSite"><p>Save Site</p></button>
-		</div>
-	</body>
+    <div id="newSite">
+      <form>
+        <input type="text" id="siteName">
+      </form>
+      <button id="saveSite">Save Site</button>
+      <button>Cancel</button>
+    </div>
+  </body>
 </html>
